--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1136</width>
-    <height>740</height>
+    <width>1173</width>
+    <height>696</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,13 +19,70 @@
 	font-size : 16px;
 }
 
-QPushButton 
-{ 
-	color: red ;
-	selection-background-color: darkgray;
+QPushButton {
+    background-color: orange;
+    border-style: outset;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: beige;
+    font: bold 14px;
+    padding: 6px;
 }
-QComboBox { color: red ;}
-QLineEdit { color: red ;}</string>
+QPushButton:pressed {
+    background-color: rgb(255, 170, 127);
+    border-style: inset;
+}
+
+QLineEdit { color: brown }
+
+QComboBox {
+    border: 1px solid gray;
+    border-radius: 3px;
+    padding: 1px 18px 1px 3px;
+}
+
+QComboBox:editable {
+    background: white;
+}
+
+QComboBox:!editable, QComboBox::drop-down:editable {
+     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                 stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+}
+
+/* QComboBox gets the &quot;on&quot; state when the popup is open */
+QComboBox:!editable:on, QComboBox::drop-down:editable:on {
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                stop: 0 #D3D3D3, stop: 0.4 #D8D8D8,
+                                stop: 0.5 #DDDDDD, stop: 1.0 #E1E1E1);
+}
+
+QComboBox:on { /* shift the text when the popup opens */
+    padding-top: 3px;
+    padding-left: 4px;
+}
+
+QComboBox::drop-down {
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    width: 15px;
+
+    border-left-width: 1px;
+    border-left-color: darkgray;
+    border-left-style: solid; /* just a single line */
+    border-top-right-radius: 3px; /* same radius as the QComboBox */
+    border-bottom-right-radius: 3px;
+}
+
+QComboBox::down-arrow {
+    image: url(C:/Users/mehdi/OneDrive/Documents/down_arrow.png);
+}
+
+QComboBox::down-arrow:on { 
+    top: 1px;
+    left: 1px;
+}</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QFrame" name="frame">
@@ -33,7 +90,7 @@ QLineEdit { color: red ;}</string>
      <rect>
       <x>20</x>
       <y>10</y>
-      <width>921</width>
+      <width>1031</width>
       <height>591</height>
      </rect>
     </property>
@@ -48,12 +105,12 @@ QLineEdit { color: red ;}</string>
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>921</width>
-       <height>591</height>
+       <width>1071</width>
+       <height>611</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background : rgb(255, 170, 127);</string>
+      <string notr="true"/>
      </property>
      <property name="currentIndex">
       <number>0</number>
@@ -237,7 +294,7 @@ subcontrol-origin: margin;
          <rect>
           <x>10</x>
           <y>390</y>
-          <width>110</width>
+          <width>121</width>
           <height>31</height>
          </rect>
         </property>
@@ -247,7 +304,7 @@ subcontrol-origin: margin;
          <rect>
           <x>160</x>
           <y>390</y>
-          <width>161</width>
+          <width>186</width>
           <height>31</height>
          </rect>
         </property>
@@ -291,9 +348,9 @@ subcontrol-origin: margin;
       <widget class="QPushButton" name="pb_supprimer">
        <property name="geometry">
         <rect>
-         <x>650</x>
+         <x>720</x>
          <y>530</y>
-         <width>121</width>
+         <width>131</width>
          <height>31</height>
         </rect>
        </property>
@@ -309,7 +366,7 @@ subcontrol-origin: margin;
         <rect>
          <x>380</x>
          <y>60</y>
-         <width>511</width>
+         <width>601</width>
          <height>441</height>
         </rect>
        </property>
@@ -320,9 +377,9 @@ subcontrol-origin: margin;
       <widget class="QPushButton" name="pb_modifier">
        <property name="geometry">
         <rect>
-         <x>380</x>
+         <x>390</x>
          <y>530</y>
-         <width>121</width>
+         <width>151</width>
          <height>31</height>
         </rect>
        </property>
@@ -333,25 +390,12 @@ subcontrol-origin: margin;
         <string>Modifier</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton">
-       <property name="geometry">
-        <rect>
-         <x>520</x>
-         <y>530</y>
-         <width>111</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>PDF</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="pushButton_3">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>510</y>
-         <width>93</width>
+         <width>186</width>
          <height>28</height>
         </rect>
        </property>
@@ -364,7 +408,7 @@ subcontrol-origin: margin;
         <rect>
          <x>10</x>
          <y>550</y>
-         <width>93</width>
+         <width>186</width>
          <height>28</height>
         </rect>
        </property>
@@ -375,9 +419,75 @@ subcontrol-origin: margin;
       <widget class="QLineEdit" name="le_supprimer">
        <property name="geometry">
         <rect>
-         <x>780</x>
+         <x>870</x>
          <y>530</y>
          <width>111</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">     border: 2px solid gray;
+     border-radius: 10px;
+     padding: 0 8px;
+     background:rgb(255, 255, 255);
+     selection-background-color: darkgray;
+ </string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="CB_modify">
+       <property name="geometry">
+        <rect>
+         <x>570</x>
+         <y>550</y>
+         <width>131</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>Matricule</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>ID</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Marque</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Modele</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Couleur</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QPushButton" name="pushButton">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>530</y>
+         <width>141</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>PDF</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="le_modifier">
+       <property name="geometry">
+        <rect>
+         <x>570</x>
+         <y>510</y>
+         <width>131</width>
          <height>31</height>
         </rect>
        </property>
@@ -399,7 +509,7 @@ subcontrol-origin: margin;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1136</width>
+     <width>1173</width>
      <height>26</height>
     </rect>
    </property>
